# Srremalex

./: .env.example  .gitignore  .replit  DEPLOYMENT.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile  HF_DEPLOYMENT_GUIDE.md  Procfile  RENDER_DEPLOYMENT.md  agent.py  app.js  config.py  docker_README.md  docker_app.py  docker_requirements.txt  docker_style.css  ecosystem.config.js  fix-requirements.py  hf_README.md  hf_app.py  hf_requirements.txt  index.html  install-codespace-deps.py  install-dependencies.sh  install-reqs.sh  install-requirements.py  install-simple.py  livekit-client.umd.min.js  netlify.toml  nginx.conf  nixpacks.toml  package-lock.json  package.json  pip-install.py  pyproject.toml  railway.toml  render.yaml  replit.md  requirements-clean.txt  requirements.txt  (+8 more)
.devcontainer/: README.md  codespace-agent.py  codespaces-info.md  devcontainer.json  setup.sh  start-services.sh
api/: create-room.js  token.js
attached_assets/: Pasted-Make-a-agent-voice-agent-for-me-named-as-Alex-DESCRIPTION-OF-ALEX-Personality-You-are-Alex-a--1755948259810_1755948259812.txt
netlify/functions/: create-room.js  token.js
static/: app.js  index.html  style.css
