[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "google-genai>=1.31.0",
    "livekit-api>=1.0.5",
    "livekit>=1.0.12",
    "livekit-agents>=1.2.6",
    "livekit-plugins-deepgram>=1.2.6",
    "livekit-plugins-elevenlabs>=1.2.6",
    "livekit-plugins-openai>=1.2.6",
    "pyjwt>=2.10.1",
    "sift-stack-py>=0.8.4",
    "livekit-plugins-google>=1.2.6",
]
